fix: momentum scroll for ios devices, and wrapping iframe #508 (#521)
* fix: momentum scroll for ios devices, and wrapping iframe #508

* fix: mistyped overflow-hidden instead of overflow-auto

--- a/client/main.css
+++ b/client/main.css
@@ -448,6 +448,10 @@
 }
 /* Custom transitions for react-transition-group -end */
 
-.obj-cover{
+.obj-cover {
   object-fit: cover;
+}
+
+.overflow-auto {
+  -webkit-overflow-scrolling: touch;
 }
